<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEAEEA7A"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvContactsApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/contacts_app"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/greenEmoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/greenEmoji"
        android:minHeight="50dp"
        android:visibility="visible"
        app:srcCompat="@drawable/greenemoji" />

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:id="@+id/webImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="40dp"
            app:srcCompat="@drawable/web"
            android:contentDescription="@string/webIcon" />

        <ImageView
            android:id="@+id/locationImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="40dp"
            app:srcCompat="@drawable/location"
            android:contentDescription="@string/locationIcon" />

        <ImageView
            android:id="@+id/callImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="40dp"
            app:srcCompat="@drawable/call"
            android:contentDescription="@string/callIcon" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAddCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorCaller"
        android:fontFamily="casual"
        android:shadowColor="#9E1C1C"
        android:text="@string/create_new_contact"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimaryDark"
        android:textStyle="bold" />
</LinearLayout>